--- a/Gunplay.DAL/Gunplay.DAL.csproj
+++ b/Gunplay.DAL/Gunplay.DAL.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Configurations>Debug;Release;qq;ivan;dfsdf;dfsdfs</Configurations>
+    <Configurations>Debug;Release;qq;ivan;dfsdf;dfsdfs;hello</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,6 +13,9 @@
 
   <ItemGroup>
     <None Update="data\img\Background.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="data\img\playerleft_down-3.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="data\img\playerleft_down.png">
