--- a/Gunplay/Gunplay.csproj
+++ b/Gunplay/Gunplay.csproj
@@ -6,11 +6,10 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
-    <Configurations>Debug;Release;qq;ivan;dfsdf;dfsdfs;hello;ugfygyi;вапвыкп;adsda</Configurations>
+    <Configurations>Debug;Release;qq;ivan;dfsdf;dfsdfs;hello;ugfygyi;вапвыкп;adsda;dfsdfsdf</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="main.gif" />
     <None Remove="View\basicShell.png" />
     <None Remove="View\Images\fastShell.png" />
     <None Remove="View\Images\freezeShell.png" />
@@ -26,7 +25,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="main.gif" />
+    <Resource Include="Images\main.gif">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="View\Images\basicShell.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
