--- a/Gunplay.BLL/Gunplay.Control.csproj
+++ b/Gunplay.BLL/Gunplay.Control.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Gunplay.DAL\Gunplay.DAL.csproj" />
+    <ProjectReference Include="..\Gunplay.DAL\Gunplay.Creation.csproj" />
     <ProjectReference Include="..\Gunplay.Domain\Gunplay.Domain.csproj" />
   </ItemGroup>
 
